k8s/manifests/prometheus/gateway.k8s.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: prometheus-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https-prometheus
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: prometheus-cert
      hosts:
        - "prometheus.oswee.local"
...
