k8s/manifests/prometheus/virtual-service.k8s.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-vs
  namespace: istio-system
spec:
  hosts:
    - "prometheus.oswee.local"
  gateways:
    - prometheus-gateway
  http:
    - route:
        - destination:
            host: prometheus
            port:
              number: 9090
...
